tests/test_input_files/good/test_good_array_26.punkt
main {
	const A = alloc [int] (0).
	println sizeof A.
}
