tests/test_input_files/bad/test_bad_array_3.punkt
main {
	const a = alloc [void] (4).
}
